[package]
name = "tmp100-tmp101"
version = "0.1.0"
authors = ["Tyler Wilcock <tyler.l.wilcock@gmail.com>"]
repository = "https://github.com/twilco/tmp100-tmp101"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TMP100 and TMP101 digital temperature sensors."
readme = "README.md"
keywords = ["temperature", "sensor", "i2c", "driver", "embedded-hal-driver", "tmp100", "tmp101"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/twilco/tmp100-tmp101"
documentation = "https://docs.rs/tmp100-tmp101"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "twilco/tmp100-tmp101", branch = "master" }
coveralls = { repository = "twilco/tmp100-tmp101", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[profile.release]
lto = true
